--- a/style.css
+++ b/style.css
@@ -2,3 +2,52 @@ html {
   height: 100%;
   width: 100%;
 }
+
+div {
+  background-color: greenyellow;
+  margin: 0px;
+  height: 350px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  border: 3px solid darkgreen;
+}
+
+.LogoTopo {
+  height: 360px;
+}
+
+.BarraDeProcura {
+  border-radius: 15px;
+  width: 1000px;
+  height: 35px;
+  display: block;
+  margin: 0 auto;
+}
+
+.fonte {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.TextoTopo {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+  border: 1px solid black;
+  margin-left: 420px;
+}
+
+li {
+  border: 3px solid black;
+  width: 800px;
+  height: 254px;
+  list-style: none;
+}
+
+.Menta {
+  border: 2px solid black;
+  height: 250px;
+}
