--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 div {
   background-color: greenyellow;
   margin: 0px;
-  height: 350px;
+  height: 200px;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -41,13 +41,12 @@ div {
 }
 
 li {
-  border: 3px solid black;
-  width: 800px;
-  height: 254px;
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
   list-style: none;
+  text-align: center;
 }
-
-.Menta {
-  border: 2px solid black;
-  height: 250px;
+.procura{
+  display: none;
 }
